--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,7 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation "com.android.support:support-v4:27.1.1"
   implementation 'com.android.support.constraint:constraint-layout:1.1.0'
@@ -119,6 +119,7 @@ dependencies {
 
   // coroutines
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.20"
 
   //Using this for parse json data to object
   implementation "com.google.code.gson:gson:2.8.1"
@@ -135,8 +136,8 @@ dependencies {
   }
 
   //dagger 2
-  implementation "com.google.dagger:dagger:2.11"
-  kapt "com.google.dagger:dagger-compiler:2.11"
+  implementation "com.google.dagger:dagger:2.13"
+  kapt "com.google.dagger:dagger-compiler:2.13"
   compileOnly 'javax.annotation:jsr250-api:1.0'
   implementation 'javax.inject:javax.inject:1'
 
